welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:10: error: value =< is not a member of Int
    while (test !=0 && avance=<num){
                             ^golomb:7: error: type mismatch;
 found   : Unit
 required: Int
  while (avance<num){
  ^